--- a/src/scss/_section.scss
+++ b/src/scss/_section.scss
@@ -13,6 +13,7 @@
     &_hero {
         // crop stycky menu
         position: relative;
+        z-index: 2;
         -webkit-clip-path: inset(0);
         clip-path: inset(0);
         clip: rect(0px, auto, auto, 0px);
